--- a/oop.ipynb
+++ b/oop.ipynb
@@ -281,6 +281,214 @@
     "myLuxuryAutonomousCar.describe_autonomous()\n",
     "myLuxuryAutonomousCar.describe_luxury()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overloading\n",
+    "\n",
+    "**Method Overloading**: Method overloading is a feature that allows a class to have more than one method with the same name, but different parameters. It is a way to achieve polymorphism in object-oriented programming. In Python, method overloading is not directly supported, but it can be achieved using default arguments or variable-length arguments. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10\n",
+      "7\n",
+      "5\n",
+      "6\n",
+      "24\n",
+      "10.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Calculator:\n",
+    "    def add(self, *args):\n",
+    "        return sum(args)\n",
+    "\n",
+    "    def subtract(self, *args):\n",
+    "        if len(args) == 0:\n",
+    "            return 0\n",
+    "        result = args[0]\n",
+    "        for num in args[1:]:\n",
+    "            result -= num\n",
+    "        return result\n",
+    "\n",
+    "    def multiply(self, *args):\n",
+    "        if len(args) == 0:\n",
+    "            return 0\n",
+    "        result = 1\n",
+    "        for num in args:\n",
+    "            result *= num\n",
+    "        return result\n",
+    "\n",
+    "    def divide(self, *args):\n",
+    "        if len(args) == 0:\n",
+    "            return 0\n",
+    "        result = args[0]\n",
+    "        for num in args[1:]:\n",
+    "            if num == 0:\n",
+    "                return \"Division by zero is not allowed\"\n",
+    "            result /= num\n",
+    "        return result\n",
+    "\n",
+    "# Create an instance of Calculator\n",
+    "calc = Calculator()\n",
+    "\n",
+    "# Demonstrate the methods with multiple inputs\n",
+    "print(calc.add(1, 2))           # Output: 3\n",
+    "print(calc.add(1, 2, 3, 4))     # Output: 10\n",
+    "print(calc.subtract(10, 3))     # Output: 7\n",
+    "print(calc.subtract(10, 3, 2))  # Output: 5\n",
+    "print(calc.multiply(2, 3))      # Output: 6\n",
+    "print(calc.multiply(2, 3, 4))   # Output: 24\n",
+    "print(calc.divide(20, 2))       # Output: 10.0\n",
+    "print(calc.divide(20, 2, 2))    # Output: 5.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Method Overriding and Polymorphism:\n",
+    "\n",
+    "**Method Overriding**: Method overriding occurs when a subclass provides a specific implementation for a method that is already defined in its superclass. The overridden method in the subclass should have the same name, parameters, and return type as the method in the superclass. This allows the subclass to provide a specific behavior for the method while still maintaining the same interface.\n",
+    "\n",
+    "**Polymorphism**: Polymorphism is the ability of different objects to respond to the same method in different ways. It allows methods to be used interchangeably with objects of different types. In the context of object-oriented programming, polymorphism typically refers to the ability of different classes to be treated as instances of the same class through inheritance. This is achieved through method overriding and interfaces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n",
+      "Moo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def make_sound(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement abstract method\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "class Cow(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Moo!\"\n",
+    "\n",
+    "# Create instances of each animal\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "cow = Cow()\n",
+    "\n",
+    "# Demonstrate polymorphism\n",
+    "def animal_sound(animal):\n",
+    "    print(animal.make_sound())\n",
+    "\n",
+    "# Using the instances\n",
+    "animal_sound(dog)  # Output: Woof!\n",
+    "animal_sound(cat)  # Output: Meow!\n",
+    "animal_sound(cow)  # Output: Moo!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abstraction:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abstraction is one of the fundamental principles of Object-Oriented Programming (OOP). It involves the process of hiding the complex implementation details and showing only the essential features of the object. This helps in reducing programming complexity and effort.Abstraction is one of the fundamental principles of Object-Oriented Programming (OOP). It involves the process of hiding the complex implementation details and showing only the essential features of the object. This helps in reducing programming complexity and effort.\n",
+    "\n",
+    "In Python, abstraction can be achieved using abstract classes and interfaces. An abstract class is a class that cannot be instantiated and often includes one or more abstract methods. These abstract methods are defined in the abstract class but contain no implementation. Subclasses of the abstract class are required to provide implementations for these abstract methods.In Python, abstraction can be achieved using abstract classes and interfaces. An abstract class is a class that cannot be instantiated and often includes one or more abstract methods. These abstract methods are defined in the abstract class but contain no implementation. Subclasses of the abstract class are required to provide implementations for these abstract methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle area: 12\n",
+      "Rectangle perimeter: 14\n",
+      "Circle area: 78.5\n",
+      "Circle perimeter: 31.400000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def perimeter(self):\n",
+    "        pass\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "    def perimeter(self):\n",
+    "        return 2 * (self.width + self.height)\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * self.radius ** 2\n",
+    "\n",
+    "    def perimeter(self):\n",
+    "        return 2 * 3.14 * self.radius\n",
+    "\n",
+    "# Create instances of Rectangle and Circle\n",
+    "rectangle = Rectangle(3, 4)\n",
+    "circle = Circle(5)\n",
+    "\n",
+    "# Demonstrate the abstract methods\n",
+    "print(f\"Rectangle area: {rectangle.area()}\")        # Output: Rectangle area: 12\n",
+    "print(f\"Rectangle perimeter: {rectangle.perimeter()}\")  # Output: Rectangle perimeter: 14\n",
+    "print(f\"Circle area: {circle.area()}\")              # Output: Circle area: 78.5\n",
+    "print(f\"Circle perimeter: {circle.perimeter()}\")    # Output: Circle perimeter: 31.400000000000002"
+   ]
   }
  ],
  "metadata": {
